tests/invalid/foreign_decl_line_number.err_exp6
   24 | #error Error in foreign decl
   28 | #error Error in foreign code
   44 | #error Error in foreign proc
